Início do exercicio 5 (lista 1)

--- a/lista-1/Makefile
+++ b/lista-1/Makefile
@@ -1,6 +1,17 @@
+CC=gcc
+CFLAGS=-W -Wall
+
+INCDIR=include
+SRCDIR=src
+BINDIR=bin
+
 all:
-	gcc -o seq_search_pk seq_search_pk.c -W -Wall
+	$(CC) $(CFLAGS) -o $(BINDIR)/seq_search_pk seq_search_pk.c
 
 clean:
 	rm -f *~ *.out
-	rm -f seq_search_pk
+	rm -f $(BINDIR)/*
+
+# EXERCÍCIO 5
+ringlist:
+	$(CC) $(CFLAGS) -I $(INCDIR) -o $(BINDIR)/ringlist $(SRCDIR)/node.c $(SRCDIR)/ringlist.c $(SRCDIR)/test_ringlist.c
