--- a/lista-1/Makefile
+++ b/lista-1/Makefile
@@ -2,6 +2,7 @@ INCDIR=include
 SRCDIR=src
 BINDIR=bin
 OBJDIR=obj
+LOGDIR=log
 
 CC=gcc
 CFLAGS=-W -Wall -Wno-sign-compare
@@ -15,7 +16,7 @@ _OBJ=index_search.o test_index_search.o
 HEADER=$(patsubst %,$(INCDIR)/%,$(_HEADER))
 OBJ=$(patsubst %,$(OBJDIR)/%,$(_OBJ))
 
-all: $(TARGET_EX1) ringlist
+all: $(TARGET_EX1) ringlist_menu ringlist
 
 $(OBJDIR)/%.o: $(SRCDIR)/%.c $(HEADER)
 	$(CC) $(CFLAGS) $(CINCLUDE) -c -o $@ $<
@@ -24,17 +25,18 @@ $(OBJDIR)/%.o: $(SRCDIR)/%.c $(HEADER)
 $(TARGET_EX1): $(OBJ)
 	$(CC) $(CFLAGS) $(CINCLUDE) -o $(BINDIR)/$@ $^
 
-# EXERCÍCIO 5/6
-ringlist:
-	$(CC) $(CFLAGS) $(CINCLUDE) -o $(BINDIR)/ringlist $(SRCDIR)/ringlist.c $(SRCDIR)/test_ringlist.c -lrt
-
-# EXERCÍCIO 5/6 (com menu)
+# EXERCÍCIO 5 (com menu)
 ringlist_menu:
 	$(CC) $(CFLAGS) $(CINCLUDE) -o $(BINDIR)/ringlist_menu $(SRCDIR)/ringlist.c $(SRCDIR)/test_ringlist_menu.c -lrt
+
+# EXERCÍCIO 6
+ringlist:
+	$(CC) $(CFLAGS) $(CINCLUDE) -o $(BINDIR)/ringlist $(SRCDIR)/ringlist.c $(SRCDIR)/test_ringlist.c -lrt
 
 clean:
 	rm -f *~ *.out
 	rm -f $(BINDIR)/*
 	rm -f $(OBJDIR)/*
+	rm -f $(LOGDIR)/*
 	rm -f $(SRCDIR)/*~
 	rm -f $(INCDIR)/*~
