Radix Sort feita

--- a/lista-2/Makefile
+++ b/lista-2/Makefile
@@ -8,12 +8,15 @@ CFLAGS=-W -Wall -I $(INCDIR)
 
 
 TARGET_1=quick_sort
+TARGET_2=radix_sort
 
-_HEADER=quick_sort.h
+_HEADER=quick_sort.h radix_sort.h
 _OBJ1=quick_sort.o test_quick_sort.o
+_OBJ2=radix_sort.o test_radix_sort.o
 
 HEADER=$(patsubst %,$(INCDIR)/%,$(_HEADER))
 OBJ1=$(patsubst %,$(OBJDIR)/%,$(_OBJ1))
+OBJ2=$(patsubst %,$(OBJDIR)/%,$(_OBJ2))
 
 
 ################# TARGETS #####################
@@ -23,6 +26,10 @@ $(OBJDIR)/%.o: $(SRCDIR)/%.c $(HEADER)
 
 
 $(TARGET_1): $(OBJ1)
+	$(CC) $(CFLAGS) -o $(BINDIR)/$@ $^ 
+
+
+$(TARGET_2): $(OBJ2)
 	$(CC) $(CFLAGS) -o $(BINDIR)/$@ $^ 
 
 
