Correções no heapsort

--- a/lista-2/Makefile
+++ b/lista-2/Makefile
@@ -9,14 +9,17 @@ CFLAGS=-W -Wall -I $(INCDIR)
 
 TARGET_1=quick_sort
 TARGET_2=radix_sort
+TARGET_3=heapsort
 
-_HEADER=quick_sort.h radix_sort.h
+_HEADER=quick_sort.h radix_sort.h heapsort.h
 _OBJ1=quick_sort.o test_quick_sort.o
 _OBJ2=radix_sort.o test_radix_sort.o
+_OBJ3=heapsort.o test_heapsort.o
 
 HEADER=$(patsubst %,$(INCDIR)/%,$(_HEADER))
 OBJ1=$(patsubst %,$(OBJDIR)/%,$(_OBJ1))
 OBJ2=$(patsubst %,$(OBJDIR)/%,$(_OBJ2))
+OBJ3=$(patsubst %,$(OBJDIR)/%,$(_OBJ3))
 
 
 ################# TARGETS #####################
@@ -32,6 +35,8 @@ $(TARGET_1): $(OBJ1)
 $(TARGET_2): $(OBJ2)
 	$(CC) $(CFLAGS) -o $(BINDIR)/$@ $^ 
 
+$(TARGET_3): $(OBJ3)
+	$(CC) $(CFLAGS) -o $(BINDIR)/$@ $^ -lrt -lm
 
 clean:
 	rm -f *~ *.out
