--- a/lista-3/Makefile
+++ b/lista-3/Makefile
@@ -5,15 +5,15 @@ SRCDIR=src
 
 CC=gcc
 CFLAGS=-W -Wall -I $(INCDIR)
-
+LIBS=-lm
 
 
 TARGET_1=merge_sort
-TARGET_2=bucket_sort
+TARGET_2=radix_sort
 
-_HEADER=merge_sort.h bucket_sort.h
+_HEADER=merge_sort.h radix_sort.h
 _OBJ1=merge_sort.o test_merge_sort.o
-_OBJ2=bucket_sort.o test_bucket_sort.o
+_OBJ2=radix_sort.o test_radix_sort.o
 
 HEADER=$(patsubst %,$(INCDIR)/%,$(_HEADER))
 OBJ1=$(patsubst %,$(OBJDIR)/%,$(_OBJ1))
@@ -32,7 +32,7 @@ $(TARGET_1): $(OBJ1)
 	$(CC) $(CFLAGS) -o $(BINDIR)/$@ $^
 
 
-$(TARGET_2): $(OBJ2)
+$(TARGET_2): $(OBJ2) $(LIBS)
 	$(CC) $(CFLAGS) -o $(BINDIR)/$@ $^
 
 
